# AdFilter

./: .travis.yml  CMakeLists.txt  README.md
include/: AdFilter.h
src/: AdFilter.cpp  main.cpp
tests/: AdFilter_tests.cpp  CMakeLists.txt
